adding features